<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username:</string>
    <string name="submit">SUBMIT</string>
    <string name="please">Please enter your username</string>
    <string name="password1">Password:</string>
    <string name="password2">Please enter your password</string>
    <string name="confirm1">Confirm Password:</string>
    <string name="confirm2">Please confirm your password</string>
    <string name="random">Random</string>
</resources>
