<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"

    tools:context=".LoginActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
        android:id="@+id/username_text"
        android:layout_alignParentLeft="true"
        android:text="@string/username"
        android:layout_weight="25"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/enter_edit"
            android:hint="@string/please"
            android:layout_toRightOf="@id/username_text"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/username_field2"
        android:layout_below="@id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password_text"
            android:layout_alignParentLeft="true"
            android:text="@string/password1"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/enter_edit"
            android:hint="@string/password2"
            android:layout_toRightOf="@id/username_text"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/username_field3"
        android:layout_below="@id/username_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password_text"
            android:layout_alignParentLeft="true"
            android:text="@string/confirm1"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/enter_edit"
            android:hint="@string/confirm2"
            android:layout_toRightOf="@id/username_text"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_below="@id/username_field3"
        android:layout_alignRight="@id/username_field2"
        android:text="@string/submit"
        android:textSize="26sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
